Refatoração da tela de reservas